--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/04-Thinking-with-visuals.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/04-Thinking-with-visuals.mdx
@@ -1,11 +1,10 @@
-
 # Thinking with visuals - Part 1
 
   
 
 ## Lesson Objective
 
-In this lesson you will learn how to solve various visual and thinking question with logical analysis and thinking
+Earlier, in the previous lesson you tried problems with numbers. In this lesson you will learn how to solve various visual and thinking questions with logical analysis and thinking. This topic deals with the graphical representation of a problem and solving them based on representation.
 
   
 
@@ -13,7 +12,7 @@ In this lesson you will learn how to solve various visual and thinking question 
 
   
 
-The way you will use to solve such questions, will enhance your thinking and will also increase your level of commitment to approach any problem fearlessly.
+The way you will use to solve such questions will enhance your creative thinking and will also increase your level of commitment to approach any problem fearlessly. Also it helps in visualization along with objects and image recognition.
 
   
 
@@ -21,7 +20,24 @@ The way you will use to solve such questions, will enhance your thinking and wil
 
   
 
-Here, basically we will be dealing with various types of visual, logical and reasoning problems, which will ask you to think deeper and you will also find this lesson very interesting. Happy learning!!
+Here, basically we will be dealing with various types of visual, logical and reasoning problems, which will ask you to think deeper and make this lesson very exciting and interesting. Happy learning!!
+
+  
+
+Are you looking for some hints?
+
+  
+
+Then here it is…
+
+  
+
+![](https://i.giphy.com/media/D1YbeWQNgTzcMZJunO/giphy.webp)
+  
+  
+  
+
+Now, hurry up to solve :fire:
 
   
   
@@ -29,280 +45,302 @@ Here, basically we will be dealing with various types of visual, logical and rea
   
   
   
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
 
-### 1. Picture equations
-
-  
-
-**What are they?**
-
-These are the equations consisting of images of different objects as variables and you have to figure out how much value that particular image object is containing.
-
-  
-
-**Way of thinking and dealing with such questions?**
-
->As you can see, it's looking more like a mathematical problem, which is asking you to solve some equations. Now, you all might have studied how to solve multivariable equations during your school days, just try to think in that particular way.
-
-  
-
-**Example 1**
-
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/_3image1.png)
-
-
-**How to approach**
-
-Yes, you are thinking right. Just assign a unique English character to to same type of objects. In example 1, I am taking blue box as ‘B’, red box as ‘R’ and green box as ‘G’ (You can choose any variable name as per your choice) and just write down on the paper, the equations, which you are getting now. And just solve them in the manner you used to solve during your 10th class and after you get the values for all variables, substitute the values of variables into the object image to which that variable is pointing.
-
-  
-
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/_3image2.png)
-
-**Follow on**
-
->Now try to solve remaining examples on you own. Hope you got the way to solve such problems and believe me it will help you a lot while solving a coding problem.
-
-  
-
-**Follow on Questions**
-
-  
-
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/_3image3.png)
-  
-
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/_3image4.png)
-  
-
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/_3image5.png)
-  
-  
-  
-  
-  
-  
-
-**Solutions to follow on questions**
-
-  
-
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/_3image6.png)
-
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/_3image7.png)
-
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/_3image8.png)
-  
-
-### 2. Inductive Reasoning
+### 1. Picture equations:
 
   
 
 **What are they?**
 
-Here you will get 2 images and you have to visualize the common trend they are following and after viewing some trends in both of them, you have to tell, which options among the 4 given images follow the same analogy or same trend.
+These are the equations consisting of images of different objects as variables and you have to figure out how much value that particular image object holds or equates to.
 
   
 
-**Way of thinking and dealing such questions?**
+**How do we think and approach such questions?**
 
->As you can see, it's looking more like an intuitive problem. You have to fully scan both the images on the left side. Now try to visualise the similarity between both the images. Usually, they might have all the same elements in a row or in a column or in a diagonal etc. So, there are various possibilities of similarity among them but try to find a more intuitive and generalised similarity between the images.
+At the first glance, it seems to be a mathematical problem, which is asking you to solve some equations. Now, you all might have studied how to solve multivariable equations during your school days, try to follow the same thinking pattern.
 
   
 
-**Example 1**
+**Example 1:** Find the missing part.
 
 
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/_3image9.png)
-  
+![](https://lh3.googleusercontent.com/SZ07XmYEePRZ7q0JcOKpLKooYCexI2i-_piYBVB2VbguZRtxPNpQg3D_Sm69V92q6ebQxXoe3LbITgqn53Gh3giC4It7KO41iHvQVjDbentduhi4qALAT1Z-X-oeDhFcjRiA2PtgfrVD9rKxtMk)
+
+
+
+1.  3R
+    
+2.  2R
+    
+3.  R
+    
+4.  4R
+    
+
 
 **How to approach**
 
-Yes, you are thinking right. You can solve this in two ways:
+If you thought of replacing the colored boxes with appropriate variables then you are on the right path! Just assign a unique English character to the same type of object. In example 1, we are taking the blue box as ‘B’, the red box as ‘R’ and the green box as ‘G’.
+
+-   You can choose any variable name as per your choice but a great tip is using appropriate variables as this will help you develop the same practice when developing programs in the future. Write down the equations you have obtained by replacing the colored boxes with alphabets and proceed to solve them in the same manner you always have done algebra.
+    
+-   After you get the values for all variables, substitute those values into the object image to which that variable is pointing.
+    
+
+**Find the missing part**
+
+![](https://lh3.googleusercontent.com/SZ07XmYEePRZ7q0JcOKpLKooYCexI2i-_piYBVB2VbguZRtxPNpQg3D_Sm69V92q6ebQxXoe3LbITgqn53Gh3giC4It7KO41iHvQVjDbentduhi4qALAT1Z-X-oeDhFcjRiA2PtgfrVD9rKxtMk)
+
+1.  3R
+    
+2.  2R
+    
+3.  R
+    
+4.  4R
+    
+
+<details>
+  <summary>Check the Solution!</summary>  
+Ans: A(3R)
+
+
+
+
+Detailed solution:
+
+B = 2R — (1)
+
+G - B = R
+
+G = R + B
+
+G = R + 2R (from (1))
+
+→ G = 3R
+  
+</details>  
+
+
+  
+
+**Follow up**
+
+Now try to solve the remaining examples on your own. We hope you understand the concept involved in solving such problems. It is an essential skill in solving a coding problem.
+
+  
+
+**Follow up Questions**
+
+  
+
+**Problem statement 1**: Find the missing value
+
+![](https://lh6.googleusercontent.com/TamykM0CtHlUnx1523CMr_ajanAETE0qmjB08fAifrxz6OaiG_XJzfUnUywEFLF-753vfGsHPMhL3VQs8fiBn_BPQfZgBYjALX1yadpEGSQLe3GolA3ES54Fy3l9bOxSF5IVxj7gm8xQryqixz8)
+  
+
+
+1.  141
+    
+2.  143
+    
+3.  146
+    
+4.  149
+    
+
+  
+<details>
+  <summary>Check the Solution!</summary>
+  
+
+Ans: C(146)
+
+  
+
+Detailed solution:
+
+3A = 42 => A = 14
+
+2B + A x A = 208
+
+2B = 208 - 196
+
+2B = 12
+
+B = 6
+
+C x C + 2B = 112
+
+C x C = 100
+
+C = 10
+
+B + A x C = 146
+
+   
+  
+</details>  
+
+
+**Problem statement 2:** Find the missing value
+
+  
+  
+
+![](https://lh5.googleusercontent.com/P2qDnzBIJ4KY5NHZTh3qatqbz9tV3bON7yVvLI89HFdbF-0QDL2QRnRNBy-eSZ9oF8teTD1D2rF2OqH9eQO7kOnhM_VnOVzlbQnBVtWs14Ph-EAbKTSZfkgroGuE0Q9EsePUS7Xkx8mbd8doTpw)
+  
+1.  10
+    
+2.  12
+    
+3.  14
+    
+4.  16
+    
+
+
+<details>
+  <summary>Check the Solution!</summary>
+  
+
+
+Ans: C(14)
+
+  
+  
+
+Detailed Solution:
+
+3A = 30 => A = 10
+
+A + 2B = 18
+
+2B = 8 => B = 4
+
+B - 2C = 2 => C = 1
+
+C + A + B = 14
+   
+  
+</details>  
+  
+
+  
+
+**Problem statement 3:** Find the missing value
+
+![](https://lh5.googleusercontent.com/t5H9rXpYkXQzOMOpLSFhmJTgyiuusv-qPXzeFeJ46wyr50h2z7NDEsJyq0qUzEH-Oo1S75fTMItRcqXsSe3nZrtrORSSDrfTWDNGhgv48lP3MGdzOOz8h-DEXMEN_SMp_xCtDDTZaaEVQtOFoRY)
+  
+
+1.  54
+    
+2.  52
+    
+3.  51
+    
+4.  38
+    
+
+<details>
+  <summary>Check the Solution!</summary>
+  
+
+Ans: C(51)
+
+  
+  
+
+Detailed Solution:
+
+3A = 45 => A = 15
+
+2B + A = 23 => B = 4
+
+B + 2C = 10 => C = 3
+
+C + B + B x D = 2 + 3 + 3 x 11 = 51
+
+  
+   
+  
+</details>  
+  
+  
+
+We suggest you explore further and try solving the vast variety of similar problems available on the internet. Let’s move further and on to the next topic.
+
+  
+
+### 2. Inductive Reasoning:
+
+  
+
+**What is it?**
+
+Here you will get 2 images and you have to visualise the common trend they are following. After viewing the images and analysing some trends between them, you have to choose from the options which among the 4 given images follow the same analogy or same trend.
+
+  
+
+**Where to start and how do we deal with such problems:**
+
+At the first glance, it looks like an intuitive problem. You have to scan both the images on the left side and try to visualise the similarity between them. They may or may not have all the same elements in a row, column or diagonal etc. So, there are various possible similarities between them but try to find a more intuitive and generalised similarity between the images.
+
+  
+
+**Example 1:**
+
+![](https://lh3.googleusercontent.com/xd8PIU3CNSMm2gUPH4xZpsdXMTSl7J_9y8PUip8xw-MoptekwPnirygRa621dJjQVXEpbeXJREqITUafQYvbSJW8DWSRycArduNgdP0AMngEznRFi0zwhWD83w0Ib1BgP5sFThhTIP2fFMd9_Q)
+
+  
+
+**How to approach:**
+
+There are often multiple ways of approaching a problem. Here, you can see two such approaches given below. Feel free to come up with alternative approaches and see if you reach the same conclusion.
 
 1.  By taking the reference of objects in the figure.
     
 2.  By looking at various objects at different columns and rows.
     
 
-(It is sure that you, will get answer from either of the ways)
+(The above two methods guarantee the correct result)
 
   
 
-1.  Just see the same type of elements are present at which position on both the figures and try to figure out if it can help you get a generalised answer.
+1.  Check for the same type of elements and their positions in both the figures. Try to figure out if this can help you get a generalised pattern between the two images.
     
-2.  Try to check what type of objects present in the same column,row or diagonal in both the figures. Are they following any pattern or so?
-    
-
-  
-
->Now, in the first example, by following strategy 2, we will get the answer as you can see there are similar types of objects on the main diagonal in both the figures. So, kudos you got it right.
-
-  
-
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/_3image10.png)
-  
-
->(YES, THIS IS THE ONLY STRATEGY WE USE WHILE SOLVING IMPLEMENTATION BASED BRUTE FORCE QUESTIONS)
-
-  
-  
-
-**Follow on**
-
->Now try to solve the remaining examples on your own. Hope you got the way to solve such problems and believe me it will help you a lot while solving a coding problem.
-
-  
-  
-  
-  
-  
-  
-
-**Follow on Questions**
-
-  
-
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/_3image11.png)
-  
-
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/_3image12.png)
-
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/_3image13.png)
-  
-  
-
-**Solutions to follow on questions**
-
-  
-
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/_3image14.png)
-
-
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-
-### 3. Paper cutting
-
-  
-
-**What are they?**
-
-These are the various steps followed up to fold a paper and to get a final image(last image). Now, you have to predict the initial paper among the given options, which on folding gives the same output.
-
-  
-
-**Way of thinking and dealing with such questions?**
-
->As, you can see, it's looking more like a pattern based problem. This problem will teach you how, a complex question can be solved by just few minute observations. Among all options, you will see a square try to predict is the pattern on paper and on final image somehow same or not. And try to analyse its folding in mind.
-
-  
-
-**Example 1**
-
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/_3image17.png)
-  
-
-**How to approach**
-
-Yes, you are thinking right. The best way to solve this question is to take in the consideration the right most half of square and just see if you cut the right half of paper from middle (half), will it be the same as the final output or not. Yes, that’s it. This will give you the correct answer.
-
-Lets see in example 1, and consider only the right half of the paper and visualise that you have cutted it in between, the third figure will give you the most similar type of image, so yes, it's the correct answer.
-
-  
-
->(This problem will enhance the level of visualisation of yours, as it plays a major role while coding complex questions).
-
-  
-
-**Follow on**
-
->Now try to solve the remaining examples on your own. Hope you got the way to solve such problems and believe me it will help you a lot while solving a coding problem.
-
-  
-  
-
-**Follow on Questions and answers**
-
-  
-
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/_3image18.png)
-
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/_3image19.png)
-
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/_3image20.png)
-  
-  
-  
-  
-  
-  
-  
-  
-  
-
-## End-of-the-lesson Assessment
-
-  
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/_3image21.png)
-
-1.    
+2.  Try to pay attention to the type of objects that are present in the same column,row or diagonal in both the figures. Are they following any noticeable patterns?
     
 
   
-  
 
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/_3image22.png)
-
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/_3image23.png)
-  
-
-2.
+Now, in the first example, by following strategy 2, we will get the answer as you can see there are similar types of objects on the main diagonal in both the figures. So, kudos you got it right.
 
   
+
+![](https://lh6.googleusercontent.com/Qv9ai68tqnzLHf89_YCTA22lh1vkXlk0SoRo4SQ1HPpU-8jIR1HuhXX1D2pWQv1HjZiHOsLeN0QV24EMdjCFUahFmT0XqQFjjs0wPJCRHB4T6gjKSsvTJcbeKvyiEe_NIp92qvVLkaeUk8kddw)
+
   
-  
-  
-  
-  
-  
+
+This is the best strategy to use when encountered with solving implementation base brute force questions.
+
   
   
 
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/_3image24.png)
+**Follow up:**
+
+Now try to solve the remaining examples on your own. Learning by doing is the most effective way to grasp and retain such concepts. These are the kind of aptitude questions you may face in your placement and internship interviews.
+
   
   
-3. ![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/_3image25.png)
+
+**Follow up Questions:**
+
+  
+  
+  
+  
   
   
   
@@ -311,3 +349,333 @@ Lets see in example 1, and consider only the right half of the paper and visuali
   
   
 
+**Question 1:**
+
+![](https://lh3.googleusercontent.com/H_BhqkE5vjKw6jol8MaR_Hsof-rM3S7tpLEq0GE9o9gnbvPVhVImMwlqyssMPPUz_g5hNc8Iy3pKabjjbgIQmuedS1f_ckIuuVLNvAh5MIS6siIK2bQX09op-J-fOUNk7q-rTV0zgXkuHopWLP8)
+  
+  
+
+<details>
+  <summary>Check the Hint!</summary>
+  
+
+  
+Hint: Observe that images on LHS both have their first two columns as a constant shape and colour.
+
+   
+  
+</details>  
+
+  
+
+[Check the Solution!](https://lh4.googleusercontent.com/30R9srqFQLadUV7mivBC3UzBUBKBhTExsUlkE56EfjeU-YHYUnsXQDJBvzZcwFDy_IDk3lFY924RW0UJ6ozu5ocKH6ifJrNiO5B7AnCgAsK6PKQmLg1LcKf-9-6w9xkT9pJDF4ggTBjyEhZNcQ)
+
+  
+
+
+  
+
+
+  
+  
+
+**Question 2:**
+
+  
+![](https://lh5.googleusercontent.com/znwSmr6_A3HH372GwTtzooo46h81MS5EKIESuNn7TnOY_bWJcrCDJdscnpMDGdQWifDMw6ZWwDKzEcYyup418qb_vtoo3IezRrZOfZit9V_LGHxZiSS3eLor2_DowQsw1nW01LtPRDXTzI7k8xs)
+
+  
+
+<details>
+  <summary>Check the Hint!</summary>
+  
+
+  
+
+When you observe the LHS, you can find that the 2nd and 3rd row are the same.
+
+   
+  
+</details>  
+
+  
+
+[Check the Solution!](https://lh4.googleusercontent.com/1dSMRQZjR72tPdm3jCtyLTbUrvKahNK8deEo3De8kH7cKxhxVFIVWnmS1WPqlrNapJwMZ7ojhCjVWC2wkHijDEHj-S6JXMGhRKwSXQKXAGtzOgwMwRD62CHtcJhp1fWS047op4OAZWyPxY9uRQ)
+
+  
+  
+  
+  
+  
+  
+
+**Question 3:**
+
+  
+![](https://lh3.googleusercontent.com/ifUtMv5ISCeG5m0kdh67lOGKLzSLK4xAw7FJghBDFVCSkaB12_SOUCR_gyFbw1uCNQ2AGJZJwBX5ZSRaz53hvl8D7jbSzjriLSizdwLtDAGT8G-qOTDQvq11n2foXPmAIk7zhT3ArUC1QF6DWlU)
+  
+
+<details>
+  <summary>Check the Hint!</summary>
+  
+
+  
+
+When you observe the LHS, you can notice that the last 2 rows have their extreme ends to be the same.
+
+   
+  
+</details>  
+
+ 
+
+[Check the Solution!](https://lh5.googleusercontent.com/aScNrc2T6uliK1yQerpqc4yjY5-Z2EjJK-wZ89wVEagvcLnW_0OLDbEdEHzFSsZdsj2qS_Kw9lc-PAK_oCWfMHq6nMkkOV0QldFH3lgE2lklbHTMZrO7bj3z1IZzonnM3_GyKIizsUvA-ZRVTxAYjkY)
+  
+
+### 3. Paper cutting:
+
+  
+
+**What is it?**
+
+These are various step by step images that show a paper is folded and cut to achieve the final pattern shown in the last image. Now, your task is to figure out what the unfolded paper would look like from the 4 options.
+
+  
+
+**Where to start and how do we deal with such problems**
+
+At the first glance it appears to be a pattern based problem. This problem will teach you how a question that appears complex can be solved by making some very detailed and minute observations . Among all the given options you will see a square which represents the unfolded paper after it has been folded and cut. Try to visualise its folding and analyse which of the four options represent the final pattern.
+
+**Example 1:**
+
+![](https://lh6.googleusercontent.com/t6tchXKQ2JlSsoqRJg_hYEkyKZDB2gPEUZYJOU4KNsKceJjdwZT3sHjwJ6QKi-1iHL_0F6YxDg2yiFo7_bsREYG_aDt082im89bMkas-KZeWLcAUIfgzChkeLIcfOsxI8G5agQa6ctxkt7d35p4)
+  
+
+**How to approach:**
+
+The best way to solve this question is to take in consideration the rightmost half of a square for each of the options one by one. Observe that if you cut the square vertically in the middle and then cut the right half of the square horizontally in the middle once again, does it look exactly like the last step shown in the question? If so, then there you have your correct answer! But be careful, you have to visualize each fold and cut being made, sometimes more than one option way look right.
+
+  
+
+**Solution:**
+
+Let’s see example 1 now. First visualize the right half of the paper after cutting and visualise that you have cut it horizontally. Now, the third figure will give you the most the same image as shown in the last step of the question. So yes, that is the correct answer.
+
+  
+
+(This problem will enhance the level of your visualisation as it is in an important skill to master while coding complex questions).
+
+  
+
+Now try to solve the remaining examples on your own.
+
+  
+  
+
+**Follow up**
+
+  
+
+**Question 1:** Choose a figure which would most closely resemble the unfolded form of figure.
+
+![](https://lh3.googleusercontent.com/qbST7m1dvCXPehmCmPqC57rgmgrwns_qSBA3100N0J6uWvf6PGNUwBqL-86-E1Iwi7-JjqQpucLSSzeZCnTtO1xn30vzF9Eq57thsydND03weH6sBymAGTamwW8EJtXa3dg2KXnmIaUW66dGU-8)
+
+
+
+<details>
+  <summary>Check the Hint!</summary>
+  
+
+  
+The paper is folded twice, so the small square will appear on all the 4 quadrants of the circle.
+   
+  
+</details>  
+
+ 
+
+<details>
+  <summary>Check the Solution!</summary>
+  
+
+  
+ The answer is option 1.
+   
+  
+</details>  
+
+ 
+
+
+
+  
+  
+  
+
+**Question 2:** Choose a figure which would most closely resemble the unfolded form of figure.
+
+![](https://lh5.googleusercontent.com/VGgxXZluowi-T4_EkPS1-94A5Zh3eDCKfQJwBZFrT70aTwVJ2zVTq8mv4ER0llaXAZ00PI-a_JBG-6trczltSn26nqNwfyypSm0daJlLxDl2NMdWU1SRHBixbj8-9KNSyoa_LDVlXB34ACW6i9o)
+
+
+<details>
+  <summary>Check the Hint!</summary>
+  
+
+  
+ The bottom right corner circle will remain the same, top left circle will be unfolded to form 3 more circles
+   
+  
+</details>  
+
+ 
+
+<details>
+  <summary>Check the Solution!</summary>
+  
+
+  
+ The answer is option 3.
+   
+  
+</details>  
+
+
+
+  
+
+**Question 3:** Choose a figure which would most closely resemble the unfolded form of figure.
+![](https://lh4.googleusercontent.com/wpq6oVEis7fHKsj0WiggvEQdhYV8VPWuQ02db5Qrf2HTM-p6znCml1-gmSyRHfvIEolSDBQg7p3yqjA6mICM75NR4FbO4mkAedoeAn7OetAWefgJYWXfoz8b0vejwop6ak1kFfhmGNlrSvblEKZQfVo)
+
+
+
+<details>
+  <summary>Check the Hint!</summary>
+  
+
+  
+Those 2 small circles will appear on all the corners.
+  
+</details>  
+
+ 
+
+<details>
+  <summary>Check the Solution!</summary>
+  
+
+  
+ The answer is option 4.
+   
+  
+</details>  
+
+  
+
+
+  
+  
+  
+  
+  
+  
+  
+  
+  
+
+## End-of-the-lesson Assessment:
+
+  
+
+**Q1.** Solve the follwoing question.
+
+![](https://lh5.googleusercontent.com/JjWnFimaT7m94KEjZb9OB5qu2_tlCUGkjg8RED69rOwxPTD9arn4XTJ1J1Rw0dhk5cn9jrZr-WP5JHkhedZpFls28_rH_ehsqtaIRiQ-ZjEZmZ3G1zQCBLvyewdOwGN87XzDGhysP4HyZ1VyX970zhA)
+  
+
+1.  A and D
+    
+2.  B and D
+    
+3.  C and D
+    
+4.  None of these
+    
+
+  
+
+**Solution:** The answer is option C.
+
+LU Measured: Problem solving
+
+  
+  
+
+**Q2.** Choose a figure which would most closely resemble the unfolded form of figure.
+
+![](https://lh6.googleusercontent.com/lRkZWjKJo7irsqs45dHvFk-z_XebLng-zC1Qn8Md3oYt_nf_CqTbpqolu3dJ5hV0AJ8FONGAzmhEQoOrSDrh7gPLkzBJhKnxDxCaDfyQqGmy7UORUvA6X8j6FIdZUvrDAsHivzSy4K65PPYAc8w)
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+
+Option A :
+
+![](https://lh6.googleusercontent.com/LHIYw4J_jH6viP62JPwVCgwWSLHOSXqX3VFNBIdFLC0FuFM8-NMwqlZNj6ovToZneJDEfsYmIkb9-e6oEb_RNlwnEJ8ZZmLj98QXR9AP4IlatbqEAdfwZ5HvVIVDwj1kn4B0pahRX1JbipiiOhndo2Y)
+  
+
+Option B:
+
+![](https://lh6.googleusercontent.com/LHIYw4J_jH6viP62JPwVCgwWSLHOSXqX3VFNBIdFLC0FuFM8-NMwqlZNj6ovToZneJDEfsYmIkb9-e6oEb_RNlwnEJ8ZZmLj98QXR9AP4IlatbqEAdfwZ5HvVIVDwj1kn4B0pahRX1JbipiiOhndo2Y)
+
+Option C:
+
+![](https://lh6.googleusercontent.com/UzXRqfm_jE4B3rXou9CwjH0k0tck7-9nckpYOar6TQJQ9GQVKUbzyVO0ZtbpPaWJk5MLy0OB1L4Pdq15fd7qNA0537GK9t-0hejWZuK9O74Y8EJ3V5Bplk6UfryN2le7zA9WJCf85Gkn4aSyz9k)
+
+Option D:
+
+![](https://lh6.googleusercontent.com/UzXRqfm_jE4B3rXou9CwjH0k0tck7-9nckpYOar6TQJQ9GQVKUbzyVO0ZtbpPaWJk5MLy0OB1L4Pdq15fd7qNA0537GK9t-0hejWZuK9O74Y8EJ3V5Bplk6UfryN2le7zA9WJCf85Gkn4aSyz9k)
+
+**Solution:** The answer is option D.
+
+  
+
+LU Measured: Problem solving
+
+  
+
+**Q3:** Find the missing value.
+
+
+![](https://lh3.googleusercontent.com/tmZ20QriwhJuCYG3DN3_vZ0OliZlzT-rlw42hA8Z6qwsBEfK4fnvWvmXbU5duc9M3gswp-FTizBtD34M0e4NKVLjZZ5T9kvGpuSChoXBw2k8PUKrU_Hqy7rffuKBbHwjx-ExCF5Qii_CkP_VfMU)
+
+1.  99
+    
+2.  103
+    
+3.  100
+    
+4.  105
+    
+
+**Answer :** B
+
+LU Measured: Problem solving
+
+  
+  
+
+And if you think we are done with Visuals, here is what we wanted to say.
+
+  
+  
+
+![](https://i.giphy.com/media/4PY9KWENaf43mm8tjs/200w.webp)
